# dark.rl

./: .gitignore  ARCHITECTURE.md  BATCH_CAPABILITIES_README.md  D2O_README.md  HF_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LORA_FILESYSTEM_README.md  LORA_FILESYSTEM_SUMMARY.md  Makefile  README.md  api_server.py  bench.py  blackwell.txt  check_model_params.py  compare_hf_vs_custom.py  compare_hf_vs_hf_wrapper.py  corrected_config.json  d2o_integration_example.py  dark_rl_tasks.db  debug_attention.py  debug_text_layers.py  example.py  hf.txt  install_node.sh  integration_test.py  integration_test_message_queue.py  integration_test_streams.py  integration_test_streams_unsloth.py  mcp.md  model_repl.py  package-lock.json  pyproject.toml  quick_d2o_test.py  simple_chat_test.py  simple_d2o_test.py  task_manager.py  test_both_implementations.py  test_custom_only.py  test_d2o.py  test_default_flash_attention.py  (+16 more)
bench/fs/numbers/: file1.txt  file2.txt  file3.txt  file5.txt  file6.txt
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: APIKeyModal.tsx  CorrectIcon.tsx  CorrectionModal.tsx  LandingPage.tsx  MCPServerDropdown.tsx  MCPSidebar.tsx  MCPToolsModal.tsx  PencilIcon.tsx  TaskDesiredFlow.md  TaskPage.tsx  ToolCallModal.tsx  TypingAnimation.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
nanovllm/: __init__.py  config.py  sampling_params.py
nanovllm/engine/: llm_engine.py  sequence.py
nanovllm/layers/: activation.py  embed_head.py  linear.py  rotary_embedding.py
src/dark/: __init__.py  llm.py  online_llm.py  online_llm_copy.py  sampling_params.py
src/dark/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
src/dark/layers/: __init__.py  attention.py  embed_head.py  fused_lora.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py
src/dark/models/: hf_qwen2_5_vl.py  qwen2_5_vl.py  qwen3.py  qwen3_hf.py  qwen3_moe.py
src/dark/trainers/: d2o.py  d2o_optimized.py  d2o_safe.py  kto.py  kto_direct_trl.py  kto_trl_adapter.py
src/dark/utils/: loader.py  lora.py  models.py
tests/: batch_demo.py  flash_attention_usage.py  integration_test_message_queue.py  integration_test_online_llm.py  train_one.py  train_one_playwright.py  train_ruler.py  train_skill.py
