[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-rl"
version = "0.1.1"
authors = [{ name = "Patrick Barker" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Advanced Kernels for Reinforcement Learning"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn==2.8.0.post2",
    "bitsandbytes>=0.43.0",
    "nvidia-ml-py",
    "xxhash",
    "json-repair>=0.47.1",
    "pillow>=11.2.1",
    "torchvision>=0.22.1",
    "mcp-use>=1.3.3",
    "peft>=0.15.2",
    "rich>=13.0.0",
    "websockets>=15.0.1",
    "qwen-vl-utils>=0.0.11",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.27",
    "openai>=1.93.3",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
Homepage="https://github.com/pbarker/dark.rl"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dark"]

[dependency-groups]
dev = [
    "pillow>=11.2.1",
    "playwright>=1.53.0",
    "pytest>=8.4.0",
    "rich>=14.0.0",
    "trl>=0.19.0",
]
