[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-rl"
version = "0.1.0"
authors = [{ name = "Patrick Barker" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Experiments in Interactive Learning"
requires-python = ">=3.11,<3.13"
dependencies = [
    "websockets==15.0.1",
    "openai>=1.35.3",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "mcp-test",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "trl[liger]>=0.19.0",
]

[project.optional-dependencies]
test = [
    "pytest"
]
dev = [
    "pillow>=11.2.1",
    "playwright>=1.53.0",
    "pytest>=8.4.0",
    "rich>=14.0.0",
    "trl>=0.19.0",
    "unsloth>=2025.7.3",
]

[project.urls]
Homepage="https://github.com/pbarker/dark.rl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dark = ["**/*.json"]
